사이트 로고 레이아웃

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
         <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Block Level Element 자기옆에 올수없는 상황 엔터로 내려가지않음   블럭요소 h1  ,p ,-->
+
+    <!-- 밑에 상황 중첩이라고 함
+     -->
+<div class="logo">
     <img src="images/logo.png" alt="콜라 로고">
+</div>   
+    
+    <!-- lnline Level Element 옆으로 (밑에 4개 인라인) a , imgage -->
+    <a href ="#">펩시소개</a>
+    <a href ="#">콜라종류</a>
+    <a href ="#">갤러리</a>
+    <a href ="#">고객센터</a>
+
 </body>
 </html>
