--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
      -->
 <div class="logo">
     <img src="images/logo.png" alt="콜라 로고">
-</div>   
-    
+</div>  
+
     <!-- lnline Level Element 옆으로 (밑에 4개 인라인) a , imgage -->
-    <a href ="#">펩시소개</a>
-    <a href ="#">콜라종류</a>
-    <a href ="#">갤러리</a>
-    <a href ="#">고객센터</a>
+    <div class="menu">
+        <a href ="#">펩시소개</a>
+        <a href ="#">콜라종류</a>
+        <a href ="#">갤러리</a>
+        <a href ="#">고객센터</a>
+    </div>
 
 </body>
 </html>
