--- a/index.html
+++ b/index.html
@@ -13,17 +13,23 @@
 
     <!-- 밑에 상황 중첩이라고 함
      -->
-<div class="logo">
-    <img src="images/logo.png" alt="콜라 로고">
-</div>  
-
-    <!-- lnline Level Element 옆으로 (밑에 4개 인라인) a , imgage -->
-    <div class="menu">
-        <a href ="#">펩시소개</a>
-        <a href ="#">콜라종류</a>
-        <a href ="#">갤러리</a>
-        <a href ="#">고객센터</a>
+<div class="wrap">
+    <div class="logo">
+        <img src="images/logo.png" alt="콜라 로고">
     </div>
+    
+        <!-- lnline Level Element 옆으로 (밑에 4개 인라인) a , imgage -->
+        <div class="menu">
+            <a href ="#">펩시소개</a>
+            <a href ="#">콜라종류</a>
+            <a href ="#">갤러리</a>
+            <a href ="#">고객센터</a>
+        </div>
+    
+        <div class="hero">
+            <img src="images/visual.png" alt="새로운 맛  출시">
+        </div>
+</div>
 
 </body>
 </html>
