미디어 영역 완료

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1 class ="hide">펩시콜라 광주</h1>
     <!-- Block Level Element 자기옆에 올수없는 상황 엔터로 내려가지않음   블럭요소 h1  ,p ,-->
 
     <!-- 밑에 상황 중첩이라고 함
@@ -29,6 +30,15 @@
         <div class="hero">
             <img src="images/visual.png" alt="새로운 맛  출시">
         </div>
+</div>
+<div class="movie">
+    <h2>moive</h2>
+    <h2 class="movie-title">youtube</h2>
+    <p class="movie -desv"> 펩시광고 영상</p>
+    <p>펩시 쇼츠영상</p>
+    <!-- 유튜브 영상 |또는 커버이미지 -->
+    <img src="images/movie1.jpg" alt="펩시 VS 코카콜라">
+    <img src="images/movie2.jpg" alt="펩시 VS 코카콜라">
 </div>
 
 </body>
