--- a/index.html
+++ b/index.html
@@ -29,17 +29,36 @@
     
         <div class="hero">
             <img src="images/visual.png" alt="새로운 맛  출시">
-        </div>
+        
 </div>
 <div class="movie">
     <h2>moive</h2>
     <h2 class="movie-title">youtube</h2>
-    <p class="movie -desv"> 펩시광고 영상</p>
+    <p class="movie-desc"> 펩시광고 영상</p>
     <p>펩시 쇼츠영상</p>
     <!-- 유튜브 영상 |또는 커버이미지 -->
     <img src="images/movie1.jpg" alt="펩시 VS 코카콜라">
     <img src="images/movie2.jpg" alt="펩시 VS 코카콜라">
 </div>
+<div class="social">
+    <img src="images/kakao_icon.png" alt="카카오톡">
+    <img src="images/naver_icon.png" alt="네이버블로그">
+    <img src="images/yellow_icon.png" alt="카카오스토리">
+    <img src="images/insta_icon.png" alt="인스타그램">
+</div>
+<div class="contact">
+<h2>pepsi cs center</h2>
+<p>1566-3082</p>
+</div>
+<div class="laction">
+    <p>광주광역시 서구 농성동 ,펩시 콜라</p>
+<p>copyright(c) 2017 .pepsi gola. all rights resserved</p>
+
+</div> 
+
+</div>
+
+
 
 </body>
 </html>
