펩시골라 하단영역 완료

--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
     <img src="images/yellow_icon.png" alt="카카오스토리">
     <img src="images/insta_icon.png" alt="인스타그램">
 </div>
+
+
+.contatct{}
 <div class="contact">
 <h2>pepsi cs center</h2>
 <p>1566-3082</p>
 </div>
+<hr id="line">
 <div class="laction">
     <p>광주광역시 서구 농성동 ,펩시 콜라</p>
 <p>copyright(c) 2017 .pepsi gola. all rights resserved</p>
