라인로케이션 추가 수정

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>펩시</title>
         <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/style.css">
+        <meta property="og:title" content="펩시콜라">
+
+        <meta property="og:site_name" content="펩시콜라">
+<meta property="og:url" content="https://github.com/kimkiyong/pepsi-gola-clone">
+<meta property="og:description" content="펩시콜라 아시아 지역본부 웹사이트 ">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://github.com/kimkiyong/pepsi-gola-clone/images/cover.png">
+
 </head>
 <body>
     <h1 class ="hide">펩시콜라 광주</h1>
