썸네일 저장

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://kimkiyong.github.io/pepsi-gola-clone/">
 <meta property="og:description" content="펩시콜라 아시아 지역본부 웹사이트 ">
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://github.com/kimkiyong/pepsi-gola-clone/images/OPCOVER.png">
+<meta property="og:image" content="https://github.com/kimkiyong/pepsi-gola-clone/images/OG COVER.png">
 
 </head>
 <body>
