--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
         <meta property="og:title" content="펩시콜라">
         <meta property="og:site_name" content="펩시콜라">
-        <meta property="og:url" content="https://kimkiyong.github.io/pepsi-gola-clone/">
+        <meta property="og:url" content="https://kimkiyong.github.io/pepsi-gola-clone">
         <meta property="og:description" content="펩시콜라 아시아 지역본부 웹사이트 ">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://github.com/kimkiyong/pepsi-gola-clone/images/OP COVER.png">
+        <meta property="og:image" content="https://github.com/kimkiyong/pepsi-gola-clone/images/COVER.png">
         
 
 </head>
