--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <div class="logo">
         <img src="images/logo.png" alt="콜라 로고">
     </div>
-    
+    <div class="buger">
+        <img src="images/icon_menu.png" alt ="전체메뉴"/>
+    </div>
         <!-- lnline Level Element 옆으로 (밑에 4개 인라인) a , imgage -->
         <div class="menu">
             <a href ="#">펩시소개</a>
@@ -73,6 +75,12 @@
 </div>
 
 
-
+<script>
+    const buger = document.querySelector(".buger");
+    buger.addEventListener("click",function(){
+        alert("사이드 메뉴를 호출했습니다..");
+    
+    });
+</script>
 </body>
 </html>
