about 페이지 완료

--- a/gallery.html
+++ b/gallery.html
@@ -13,11 +13,11 @@
 <meta property="og:image" content="https://kimkiyong/github.com/pepsi-gola-clone/tree/master/images/COVER">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <title>펩시골라</title>
+    <title >펩시콜라 &gt;	갤러리 </title>
 </head>
 
 <body>
-    <h1 class="hide" id="title">펩시골라 광주</h1>
+    <h1 class="hide" id="title">갤러리</h1>
     <div class="wrap">
         <div class="logo">
             <img src="images/logo.png" alt="펩시골라">
@@ -33,11 +33,12 @@
             <a href="service.html">고객센터</a>
         </div>
         <div class="hero">
-            <img src="images/visual.png" alt="새로운 맛 출시">
+            <img src="images/visual_sub.jpg" alt="새로운 맛 출시">
         </div>
-        <div class="movie">
-            <h2 class="page-title">youtube</h2>
-            <p class="page-desc">펩시 쇼츠</p>
+        <div class="brand">
+            <h2 class="page-title">갤러리</h2>
+            <p class="page-desc">갤러리</p>
+            <blockquote class="tip">갤러리 준비중입니다..</blockquote>
             <!--유튜브 영상|또는 커버 이미지-->
             <img src="images/movie1.jpg" alt="펩시 vs 코카콜라">
             <img src="images/movie2.jpg" alt="펩시 vs 코카콜라">
