--- a/category.html
+++ b/category.html
@@ -13,7 +13,7 @@
 <meta property="og:image" content="https://kimkiyong/github.com/pepsi-gola-clone/tree/master/images/COVER">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <title>펩시골라</title>
+    <title>펩시콜라 &gt;카테고리 </title>
 </head>
 
 <body>
@@ -33,11 +33,13 @@
             <a href="service.html">고객센터</a>
         </div>
         <div class="hero">
-            <img src="images/visual.png" alt="새로운 맛 출시">
+            <img src="images/visual_sub.jpg" alt="새로운 맛 출시">
         </div>
-        <div class="movie">
-            <h2 class="page-title">youtube</h2>
-            <p class="page-desc">펩시 쇼츠</p>
+        <div class="brand">
+            <h2 class="page-title">카테고리</h2>
+            <p class="page-desc">카테고리
+            </p>
+            <blockquote class="tip">카테고리 준비중입니다..</blockquote>
             <!--유튜브 영상|또는 커버 이미지-->
             <img src="images/movie1.jpg" alt="펩시 vs 코카콜라">
             <img src="images/movie2.jpg" alt="펩시 vs 코카콜라">
