--- a/about.html
+++ b/about.html
@@ -1,122 +1,85 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="펩시골라" />
-    <meta property="og:site_name" content="펩시골라" />
-    <meta property="og:url" content="https://imjini.github.io/pepsi-clone" />
-    <meta
-      property="og:description"
-      content="펩시골라 아시아 지역본부-광주지사 웹사이트, 펩시골라 브랜드 홍보 및 제품 홍보"
-    />
-    <meta property="og:type" content="article" />
-    <meta
-      property="og:image"
-      content="https://kimkiyong/github.com/pepsi-gola-clone/tree/master/images/COVER"
-    />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>펩시골라&gt; 펩시소게</title>
-  </head>
 
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="펩시골라">
+<meta property="og:site_name" content="펩시골라">
+<meta property="og:url" content="https://kimkiyong.github.io/pepsi-clone">
+<meta property="og:description" content="펩시골라 아시아 지역본부-광주지사 웹사이트, 펩시골라 브랜드 홍보 및 제품 홍보">
+<meta property="og:type" content="article">
+<meta property="og:image" content="https://kimkiyong.github.io/pepsi-clone/images/COVER.png">
+
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <title>펩시골라&gt;펩시소개</title>
+</head>
+
+<body>
     <h1 class="hide" id="title">펩시골라 광주</h1>
     <div class="wrap">
-      <div class="logo">
-        <img src="images/logo.png" alt="펩시골라" />
-      </div>
-      <div class="opener">
-        <img src="images/icon_menu.png" alt="전체메뉴" />
-      </div>
-      <div class="menu hide">
-        <button id="closer">&times;</button>
-        <a href="about.html">펩시 소개</a>
-        <a href="catogry.html">콜라종류</a>
-        <a href="gallery.html">갤러리</a>
-        <a href="service.html">고객센터</a>
-      </div>
-      <div class="hero">
-        <img src="images/visual_sub.jpg" alt="새로운 맛 출시" />
-      </div>
-      <div class="brand">
-        <h2 class="page-title">브랜드 스토리</h2>
-        <p class="page-desc">브랜드</p>
-        <div class="brand-body"></div>
-        <blockquote class="tip">
-          인용문 :학자, 유명인의 말을 빌어서 내용쓰기.
-        </blockquote>
-        <!--유튜브 영상|또는 커버 이미지-->
-        <div class="body1">
-            <img src="images/브랜드1.png" alt="브랜드 아이덴티" />
-            <p>
-              미국 펩시코의 자회사 탄산음료 브랜드. 코카콜라 컴퍼니의 최대 라이벌.
-              그러나 그룹 매출액으로는 이기지만 브랜드 가치는 코카콜라가 압도적으로
-              위다.
-            </p>
-            <p>
-              펩시콜라는 1898년 8월 28일 노스캐롤라이나 출신 약사인 케일럽
-              브래덤(Caleb Bradham)에 의해 만들어졌고 그 해 현재 펩시코의 모태가
-              되는 회사를 설립했다.
-            </p>
-            <p>
-              1965년 프리토레이사와 합병하면서 "펩시코"라고 명칭을 바꾸었다. 본사는
-              미국 뉴욕주 웨스트체스터 카운티[3]의 해리슨 시에 있다.
-            </p>
+        <div class="logo">
+            <img src="images/logo.png" alt="펩시골라">
         </div>
-        <div class="body2">
-            <img src="images/브랜드2.png" alt="브랜드 아이덴티2" />
-            <p>
-              미국 펩시코의 자회사 탄산음료 브랜드. 코카콜라 컴퍼니의 최대 라이벌.
-              그러나 그룹 매출액으로는 이기지만 브랜드 가치는 코카콜라가 압도적으로
-              위다.
-            </p>
-            <p>
-              펩시콜라는 1898년 8월 28일 노스캐롤라이나 출신 약사인 케일럽
-              브래덤(Caleb Bradham)에 의해 만들어졌고 그 해 현재 펩시코의 모태가
-              되는 회사를 설립했다.
-            </p>
-            <p>
-              1965년 프리토레이사와 합병하면서 "펩시코"라고 명칭을 바꾸었다. 본사는
-              미국 뉴욕주 웨스트체스터 카운티[3]의 해리슨 시에 있다.
-            </p>
+        <div class="opener">
+            <img src="images/icon_menu.png" alt="전체메뉴">
         </div>
-        <div class="body3">
-            <img src="images/브랜드3.png" alt="브랜드 아이덴티3 "/>
-            <p>
-              미국 펩시코의 자회사 탄산음료 브랜드. 코카콜라 컴퍼니의 최대 라이벌.
-              그러나 그룹 매출액으로는 이기지만 브랜드 가치는 코카콜라가 압도적으로
-              위다.
-            </p>
-            <p>
-              펩시콜라는 1898년 8월 28일 노스캐롤라이나 출신 약사인 케일럽
-              브래덤(Caleb Bradham)에 의해 만들어졌고 그 해 현재 펩시코의 모태가
-              되는 회사를 설립했다.
-            </p>
-            <p>
-              1965년 프리토레이사와 합병하면서 "펩시코"라고 명칭을 바꾸었다. 본사는
-              미국 뉴욕주 웨스트체스터 카운티[3]의 해리슨 시에 있다.
-            </p>
+        <div class="menu">
+            <button id="closer">&times;</button>
+            <a href="about.html">펩시소개</a>
+            <a href="category.html">콜라종류</a>
+            <a href="gallery.html">갤러리</a>
+            <a href="service.html">고객센터</a>
         </div>
-      </div>
-      <div class="social">
-        <img src="images/kakao_icon.png" alt="카카오" />
-        <img src="images/naver_icon.png" alt="네이버 블로그" />
-        <img src="images/yellow_icon.png" alt="카카오 스토리" />
-        <img src="images/insta_icon.png" alt="인스타그램" />
-      </div>
-      <div class="contact">
-        <h2>pepsi cs center</h2>
-        <p>1566-3082</p>
-      </div>
-      <hr id="line" />
-      <div class="location">
-        <p>광주광역시 서구 경열로 3, 펩시골라</p>
-        <p>copyright(c) 2017. pepsi gola. all right reserved</p>
-      </div>
+        <div class="hero">
+            <img src="images/visual.png" alt="새로운 맛 출시">
+        </div>
+        </div>
+        <!--about페이지-->
+        <div class="brand">
+            <h2 class="page-title">Brand Story</h2>
+            <p class="page-desc">브랜드</p>
+            <div class="brand-body">
+                <img src="/images/브랜드1.png" alt="브랜드 아이덴티티">
+                <div class="body1">
+                    <p>
+                        미국 펩시코의 자회사 탄산음료 브랜드. 코카콜라 컴퍼니의 최대 라이벌. 그러나 그룹 매출액으로는 이기지만 브랜드 가치는 코카콜라가 압도적으로 위다.
+                    </p>
+                </div>
+                <div class="body2">
+                    <p>
+                        펩시콜라는 1898년 8월 28일 노스캐롤라이나 출신 약사인 케일럽 브래덤(Caleb Bradham)에 의해 만들어졌고 그 해 현재 펩시코의 모태가 되는 회사를 설립했다.
+                    </p>
+                </div>
+                <div class="body3">
+                    <p> 1965년 프리토레이사와 합병하면서 "펩시코"라고 명칭을 바꾸었다.
+                        
+                        본사는 미국 뉴욕주 웨스트체스터 카운티[3]의 해리슨 시에 있다.
+                    </p>
+                    <img src="/images/브랜드2.png" alt="브랜드 아이덴티티">
+                </div>
+        </div>
+        <!--about페이지-->
+        <div class="social">
+            <img src="images/kakao_icon.png" alt="카카오">
+            <img src="images/naver_icon.png" alt="네이버 블로그">
+            <img src="images/yellow_icon.png" alt="카카오 스토리">
+            <img src="images/insta_icon.png" alt="인스타그램">
+        </div>
+        <div class="contact"> 
+            <h2>pepsi cs center</h2>
+            <p>1566-3082</p>
+        </div>
+        <hr id="line">
+        <div class="location">
+            <p>광주광역시 서구 경열로 3, 펩시골라</p>
+            <p>copyright(c) 2017. pepsi gola. all right reserved</p>
+        </div>
     </div>
     <!-- /.wrap -->
     <script src="script/main.js"></script>
-  </body>
+</body>
+
 </html>
