--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="펩시골라">
 <meta property="og:site_name" content="펩시골라">
-<meta property="og:url" content="https://imjini.github.io/pepsi-clone">
+<meta property="og:url" content="https://kimkiyong.github.io/pepsi-clone">
 <meta property="og:description" content="펩시골라 아시아 지역본부-광주지사 웹사이트, 펩시골라 브랜드 홍보 및 제품 홍보">
 <meta property="og:type" content="article">
-<meta property="og:image" content="https://kimkiyong/github.com/pepsi-gola-clone/tree/master/images/COVER">
+<meta property="og:image" content="https://kimkiyong.github.io/pepsi-clone/images/cover.png">
+
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <title>펩시골라</title>
@@ -28,7 +29,7 @@
         <div class="menu hide">
             <button id="closer">&times;</button>
             <a href="about.html">펩시소개</a>
-            <a href="catogry.html">콜라종류</a>
+            <a href="category.html">콜라종류</a>
             <a href="gallery.html">갤러리</a>
             <a href="service.html">고객센터</a>
         </div>
