--- a/service.html
+++ b/service.html
@@ -7,17 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="펩시골라">
 <meta property="og:site_name" content="펩시골라">
-<meta property="og:url" content="https://imjini.github.io/pepsi-clone">
+<meta property="og:url" content="https://kimkiyong.github.io/pepsi-clone">
 <meta property="og:description" content="펩시골라 아시아 지역본부-광주지사 웹사이트, 펩시골라 브랜드 홍보 및 제품 홍보">
 <meta property="og:type" content="article">
-<meta property="og:image" content="https://kimkiyong/github.com/pepsi-gola-clone/tree/master/images/COVER">
+<meta property="og:image" content="https://kimkiyong.github.io/pepsi-clone/images/cover.png">
+
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <title>펩시콜라 &gt;	서비스 </title>
+    <title>펩시골라&gt;펩시소개</title>
 </head>
 
 <body>
-    <h1 class="hide" id="title">서비스</h1>
+    <h1 class="hide" id="title">펩시골라 광주</h1>
     <div class="wrap">
         <div class="logo">
             <img src="images/logo.png" alt="펩시골라">
@@ -28,21 +29,21 @@
         <div class="menu hide">
             <button id="closer">&times;</button>
             <a href="about.html">펩시소개</a>
-            <a href="catogry.html">콜라종류</a>
+            <a href="category.html">콜라종류</a>
             <a href="gallery.html">갤러리</a>
             <a href="service.html">고객센터</a>
         </div>
         <div class="hero">
-            <img src="images/visual_sub.jpg" alt="새로운 맛 출시">
+            <img src="images/visual.png" alt="새로운 맛 출시">
         </div>
+        </div>
+        <!--about페이지-->
         <div class="brand">
-            <h2 class="page-title">서비스</h2>
+            <h2 class="page-title">Customer service</h2>
             <p class="page-desc">서비스</p>
-            <blockquote class="tip">서비스 준비중입낟..</blockquote>
-            <!--유튜브 영상|또는 커버 이미지-->
-            <img src="images/movie1.jpg" alt="펩시 vs 코카콜라">
-            <img src="images/movie2.jpg" alt="펩시 vs 코카콜라">
+            <blockquote class="tip">컨텐츠를 준비중입니다.</blockquote>
         </div>
+        <!--about페이지-->
         <div class="social">
             <img src="images/kakao_icon.png" alt="카카오">
             <img src="images/naver_icon.png" alt="네이버 블로그">
